--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,7 +7,7 @@
   when: civicrm == 'Yes' and env == 'Dev'
 
 - name: Enable Habitat
-  command: "cv en habitat"
+  command: "cv en habitat --refresh"
   args:
     chdir: "{{ webroot }}"
   become_user: "{{ run_as_user }}"
